--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          # Ensure deployment uses the main branch source
-          publish_branch: main
+          # Deploy to gh-pages branch
+          publish_branch: gh-pages
